[CONEX] Añado primera versión de navegacion lateral

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,3 +1,11 @@
 {
-    "titulo": "CONEX"
+    "titulo": "CONEX",
+    "nav_bar":{
+        "filtro_instrumentos":"Filtro instrumentos",
+        "convenios":"Convenios",
+        "encomiendas":"Encomiendas",
+        "decretos_resoluciones":"Decretos y resoluciones",
+        "accesos":"Accesos",
+        "administracion":"Administración"
+    }
 }
