[CONEX] Añado navegador en buscadores de convenios

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,5 +7,9 @@
         "decretos_resoluciones":"Decretos y resoluciones",
         "accesos":"Accesos",
         "administracion":"Administración"
+    },
+    "buscador":{
+        "criterios_busqueda":"Criterios de busqueda",
+        "convenios":"Convenios"
     }
 }
