--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -35,13 +35,13 @@
     "show-details-agreements":{
         "datos_convenio":"Datos del Convenio",
         "fecha_formalizacion":"Fecha de formalización:",
-        "num_expediente":"Nº Expediente",
+        "num_expediente":"Nº Expediente:",
         "titulo":"Titulo/objeto :",
         "organos_firmantes":"Órganos firmantes:",
-        "firmantes":"Firmantes",
-        "obligados":"Obligados",
+        "firmantes":"Firmantes:",
+        "obligados":"Obligados:",
         "entidades_firmantes":"Entidades firmantes:",
-        "entidad":"Entidad",
+        "entidad":"Entidad:",
         "tipo_convenio":"Tipo Convenio:",
         "materia":"Materia:",
         "anexos":"Anexos",
@@ -50,7 +50,7 @@
         "desde":"Desde:",
         "hasta":"Hasta:",
         "ingresos":"Ingresos:",
-        "gastos":"Gastos",
+        "gastos":"Gastos:",
         "prorroga":"Prórroga:",
         "duracion":"Duración:"
     }
