[Conex] Añado función para descargar pdf

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -53,5 +53,11 @@
         "gastos":"Gastos:",
         "prorroga":"Prórroga:",
         "duracion":"Duración:"
+    },
+    "folder":{
+        "fecha":"Fecha:",
+        "nombreFichero":"Nombre fichero:",
+        "descripcion":"Descripción:",
+        "descargar":"Descargar"
     }
 }
