[CONEX] Se añade funcionalidad a la ventana modal de descargas y la ventana de relacionados

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -59,5 +59,10 @@
         "nombreFichero":"Nombre fichero:",
         "descripcion":"Descripción:",
         "descargar":"Descargar"
+    },
+    "related":{
+        "num_convenio": "Nº Convenio:",
+        "fecha":"Fecha:",
+        "titulo":"Título:"
     }
 }
