[CONEX] Inicio formulario encomienda

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -65,5 +65,20 @@
         "num_convenio": "Nº Convenio:",
         "fecha":"Fecha:",
         "titulo":"Título:"
+    },
+    "buscador-encomiendas":{
+        "titulo":"Criterio de busqueda Encomiendas",
+        "titulo-objeto":"Titulo/objeto:",
+        "organo-responsable":"Órgano responsable:",
+        "fecha-formalizacion":"Fecha de formalización:",
+        "desde":"Desde:",
+        "hasta":"Hasta:",
+        "description_organo":"(*)Las Encomienda de Gestión suscritas por los distritos , están asociados a la SGT a la que figure adscrita la Oficina del Secretario de la Junta de Gobierno.",
+        "num_encomienda":"Nº de encomienda:",
+        "importe_gastos":"Importe gastos:",
+        "encomendante":"Encomendante:",
+        "encomendado":"Encomendado:",
+        "tipo_aportacion":"Tipo de aportación:",
+        "materia":"Materia:"
     }
 }
