[CONEX] Añado nuevos componentes comunes

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -86,5 +86,12 @@
        "fecha_formalizacion":"Fecha de formalización:",
        "titulo":"Titulo:",
        "vigencia":"Vigencia:" 
+    },
+    "show-details-parcels":{
+        "tipo_aprobacion":"Tipo Aprobación:",
+        "encomendante":"Encomendante:",
+        "encomendado":"Encomendado:",
+        "materia":"Materia:",
+        "anexos":"Anexos"
     }
 }
