[Conex] Inicio el detalle de decretos

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -105,5 +105,12 @@
         "sgts":"SGTs",
         "distritos":"Distritos",
         "ooaa":"OO.AA"
+    },
+    "list-decrees":{
+        "num_decreto":"Nº de Decreto/Resolución:",
+        "area":"Area:",
+        "tipo":"Tipo:",
+        "fecha":"Fecha:",
+        "descripcion":"Descripción:"
     }
 }
